// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue > . 1`] = `
{
  "candidates": [
    "global:container",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer utilities {
  :global(.global\\:container) {
    width: 100%;
    @media (width >= 640px) {
      max-width: 640px;
    }
    @media (width >= 768px) {
      max-width: 768px;
    }
    @media (width >= 1024px) {
      max-width: 1024px;
    }
    @media (width >= 1280px) {
      max-width: 1280px;
    }
    @media (width >= 1536px) {
      max-width: 1536px;
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`vue > . 2`] = `
{
  "candidates": [
    "slotted:container",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer utilities {
  :slotted(.slotted\\:container) {
    width: 100%;
    @media (width >= 640px) {
      max-width: 640px;
    }
    @media (width >= 768px) {
      max-width: 768px;
    }
    @media (width >= 1024px) {
      max-width: 1024px;
    }
    @media (width >= 1280px) {
      max-width: 1280px;
    }
    @media (width >= 1536px) {
      max-width: 1536px;
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`vue > . 3`] = `
{
  "candidates": [
    "deep:container",
  ],
  "css": "@layer properties, theme, base, components, utilities;
@layer utilities {
  :deep(.deep\\:container) {
    width: 100%;
    @media (width >= 640px) {
      max-width: 640px;
    }
    @media (width >= 768px) {
      max-width: 768px;
    }
    @media (width >= 1024px) {
      max-width: 1024px;
    }
    @media (width >= 1280px) {
      max-width: 1280px;
    }
    @media (width >= 1536px) {
      max-width: 1536px;
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;
